<resources>
    <string name="app_name">vidaily</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titles -->
    <string name="title_home">홈</string>
    <string name="title_upload">업로드</string>
    <string name="title_my">마이</string>
    <string name="title_video">영상 조회</string>
    <string name="title_search">검색</string>
    <string name="title_user">사용자</string>
    <string name="title_follower">팔로워</string>
    <string name="title_following">팔로잉</string>
    <string name="title_comment">작성 댓글</string>

    <!-- Menu -->
    <string name="menu_search">검색</string>
    <string name="menu_preference">설정</string>
    <string name="menu_done">완료</string>

    <!-- Alarm -->
    <string name="alarm_following">새로운 팔로워가 있습니다.</string>
    <string name="alarm_comment">글 \"%s\"에 새로운 댓글이 달렸습니다.</string>

    <!-- Video Metadata -->
    <string name="video_views">조회수 %1d회</string>
    <string name="createdDate">%1$tY년 %1$tb %1$te일</string>
    <string name="createdTime">%1$tY.%1$tm.%1$td %1$tH:%1$tM</string>

    <!-- Sign in/up -->
    <string name="hint_email">이메일</string>
    <string name="hint_pwd">비밀번호</string>
    <string name="hint_code">코드</string>
    <string name="btn_signup">회원가입</string>
    <string name="toast_no_email">이메일을 입력하세요.</string>
    <string name="toast_no_pwd">비밀번호를 입력하세요.</string>

    <!-- Login Fragment -->
    <string name="login_login">로그인</string>

    <!-- Signup Fragment -->
    <string name="signup_code">코드 전송</string>
    <string name="signup_code_match">확인되었습니다.</string>
    <string name="toast_signup_success">회원가입을 완료했습니다.</string>
    <string name="toast_signup_failed">회원가입을 실패했습니다.</string>
    <string name="toast_signup_wrong_code">코드가 일치하지 않습니다.</string>

    <!-- Profile Fragment -->
    <string name="hint_username">닉네임</string>
    <string name="toast_no_image">프로필 사진을 선택하세요.</string>
    <string name="toast_no_username">닉네임을 입력하세요.</string>
    <string name="profile_confirm">완료</string>

    <!-- Home Fragment -->
    <string name="home_label_today">오늘의 동영상</string>
    <string name="home_label_popular">인기 동영상</string>
    <string name="home_label_follow">팔로우하는 동영상</string>
    <string name="home_more">더보기</string>
    <string name="home_toast_back_pressed">\'뒤로가기\'를 한 번 더 누르면 종료됩니다.</string>

    <!-- Upload Fragment -->
    <string name="hint_upload_title">제목</string>
    <string name="hint_upload_description">설명</string>
    <string name="toast_no_title">제목을 입력하세요.</string>
    <string name="toast_upload_error">동영상 업로드 중 문제가 발생했습니다.</string>

    <!-- My Fragment -->
    <string name="my_logout">로그아웃</string>

    <!-- Video Fragment -->
    <string name="hint_comment">댓글</string>
    <string name="toast_no_comment">댓글을 입력하세요.</string>

    <!-- User Fragment -->
    <string name="user_btn_follow">팔로우</string>
    <string name="user_btn_following">팔로잉</string>
    <string name="user_follower">팔로워</string>
    <string name="user_following">팔로잉</string>

    <!-- Search Fragment -->
    <string name="search_label">동영상을 검색해보세요.</string>

    <!-- Follow Fragment -->
    <string name="item_follow_metadata">팔로워 %d명 · 팔로잉 %d명</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>