<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Theme.Vidaily.HomeLabel"
                    android:id="@+id/home_label_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_label_today"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    style="@style/Theme.Vidaily.HomeMoreBtn"
                    android:id="@+id/home_more_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/home_more"
                    app:layout_constraintTop_toTopOf="@id/home_label_today"
                    app:layout_constraintBottom_toBottomOf="@id/home_label_today"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:drawableRightCompat="@drawable/ic_baseline_arrow_right_24" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/home_label_today"
                    tools:listitem="@layout/item_home_small"/>

                <TextView
                    style="@style/Theme.Vidaily.HomeLabel"
                    android:id="@+id/home_label_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_layout_margin"
                    android:text="@string/home_label_popular"
                    app:layout_constraintTop_toBottomOf="@id/home_recycler_today"
                    app:layout_constraintStart_toStartOf="@id/home_label_today"/>

                <TextView
                    style="@style/Theme.Vidaily.HomeMoreBtn"
                    android:id="@+id/home_more_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/home_more"
                    app:layout_constraintTop_toTopOf="@id/home_label_popular"
                    app:layout_constraintBottom_toBottomOf="@id/home_label_popular"
                    app:layout_constraintEnd_toEndOf="@id/home_more_today"
                    app:drawableRightCompat="@drawable/ic_baseline_arrow_right_24" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/home_label_popular"
                    tools:listitem="@layout/item_home_small"/>

                <TextView
                    style="@style/Theme.Vidaily.HomeLabel"
                    android:id="@+id/home_label_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_layout_margin"
                    android:text="@string/home_label_follow"
                    app:layout_constraintTop_toBottomOf="@id/home_recycler_popular"
                    app:layout_constraintStart_toStartOf="@id/home_label_popular"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/home_label_follow"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>